(library
 (name mupdf)
 (public_name mupdf)
 (libraries ctypes-foreign)
 ; ctypes backward compatibility shims warn sometimes; suppress them
 ; (flags (:standard -w -9-27))
 (ctypes
  (external_library_name mupdf)
  (build_flags_resolver pkg_config)
  (headers (include "mupdf/fitz.h"))
  (type_description
   (instance Types)
   (functor Type_description)
  )
  (function_description
   (concurrency unlocked)
   (instance Functions)
   (functor Function_description)
  )
  (generated_types Types_generated)
  (generated_entry_point C)
 )
)
